--- a/src/OpenSrs/OpenSrs.csproj
+++ b/src/OpenSrs/OpenSrs.csproj
@@ -3,7 +3,8 @@
   <PropertyGroup>
     <AssemblyName>OpenSrs</AssemblyName>
     <TargetFrameworks>netstandard2.0</TargetFrameworks>
-    <VersionPrefix>0.9.0</VersionPrefix>
+    <VersionPrefix>0.10.0</VersionPrefix>
+    <LangVersion>8</LangVersion>
 
     <!-- Package Details-->
     <Authors>iamcarbon</Authors>
@@ -14,7 +15,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.ComponentModel.Annotations" Version="4.5.0" />
+    <PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0" />
   </ItemGroup>
   
 </Project>
