--- a/src/OpenSrs/OpenSrs.csproj
+++ b/src/OpenSrs/OpenSrs.csproj
@@ -2,9 +2,9 @@
 
   <PropertyGroup>
     <AssemblyName>OpenSrs</AssemblyName>
-    <TargetFrameworks>netstandard2.0</TargetFrameworks>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <VersionPrefix>0.10.0</VersionPrefix>
-    <LangVersion>8</LangVersion>
+    <LangVersion>9</LangVersion>
 
     <!-- Package Details-->
     <Authors>iamcarbon</Authors>
